secondfile/objects/ASE_Technical_Review_Criteria__c.object
<CustomObject>
    <fields>
        <fullName>CIR_Operator__c</fullName>
        <label>CIR Operator</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Field__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>&gt;</fullName>
                </value>
                <value>
                    <fullName>&lt;</fullName>
                </value>
                <value>
                    <fullName>=</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CIR_Speed__c</fullName>
        <label>CIR Speed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CIR_Value__c</fullName>
        <formula>IF(
AND(
 NOT(ISBLANK( TEXT( CIR_Operator__c ) ) ),
 NOT(ISBLANK(  CIR_Speed__c  ) ) 
)
,  TEXT(CIR_Operator__c) + TEXT(CIR_Speed__c), &apos;&apos;)</formula>
        <label>CIR Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Checkbox_Value__c</fullName>
        <inlineHelpText>Select a value when field selected is BAN Check</inlineHelpText>
        <label>Checkbox Value</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Field__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Checked</fullName>
                </value>
                <value>
                    <fullName>Unchecked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <label>Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BAN Check</fullName>
                </value>
                <value>
                    <fullName>CNUM Type</fullName>
                </value>
                <value>
                    <fullName>Service Type</fullName>
                </value>
                <value>
                    <fullName>Port Speed</fullName>
                </value>
                <value>
                    <fullName>ASE Basic CIR Downstream Mbps Speed</fullName>
                </value>
                <value>
                    <fullName>ASE Broadband CIR Downstream Mbps Speed</fullName>
                </value>
                <value>
                    <fullName>Network Type</fullName>
                </value>
                <value>
                    <fullName>LATA</fullName>
                </value>
                <value>
                    <fullName>Config Type</fullName>
                </value>
                <value>
                    <fullName>Site Designation</fullName>
                </value>
                <value>
                    <fullName>Port/VLAN Based</fullName>
                </value>
                <value>
                    <fullName>MAC Addresses</fullName>
                </value>
                <value>
                    <fullName>Port Price</fullName>
                </value>
                <value>
                    <fullName>CIR Price</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Multi__c</fullName>
        <label>Multi Options</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Field__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>100 Mbps Port</fullName>
                </value>
                <value>
                    <fullName>1 Gbps Port</fullName>
                </value>
                <value>
                    <fullName>10 Gbps Port</fullName>
                </value>
                <value>
                    <fullName>ASE Basic</fullName>
                </value>
                <value>
                    <fullName>ASE Broadband</fullName>
                </value>
                <value>
                    <fullName>Base</fullName>
                </value>
                <value>
                    <fullName>Promotion</fullName>
                </value>
                <value>
                    <fullName>Single End Customer</fullName>
                </value>
                <value>
                    <fullName>Multi End Customer</fullName>
                </value>
                <value>
                    <fullName>Inter LATA</fullName>
                </value>
                <value>
                    <fullName>Intra LATA</fullName>
                </value>
                <value>
                    <fullName>Point To Point</fullName>
                </value>
                <value>
                    <fullName>Multi Point</fullName>
                </value>
                <value>
                    <fullName>Hub &amp; Spoke</fullName>
                </value>
                <value>
                    <fullName>Hub</fullName>
                </value>
                <value>
                    <fullName>Spoke</fullName>
                </value>
                <value>
                    <fullName>Port Based</fullName>
                </value>
                <value>
                    <fullName>VLAN Based</fullName>
                </value>
                <value>
                    <fullName>64</fullName>
                </value>
                <value>
                    <fullName>250</fullName>
                </value>
                <value>
                    <fullName>251 - 500</fullName>
                </value>
                <value>
                    <fullName>abcd</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price_Operator_Values__c</fullName>
        <label>Price Operator</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Field__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>&gt;</fullName>
                </value>
                <value>
                    <fullName>&lt;</fullName>
                </value>
                <value>
                    <fullName>=</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price_Value__c</fullName>
        <label>Price Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Field__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Checkbox</fullName>
                </value>
                <value>
                    <fullName>Multi select</fullName>
                </value>
                <value>
                    <fullName>Text &amp; Number</fullName>
                </value>
                <value>
                    <fullName>Picklist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>ASE Technical Review Criteria</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>Field__c</columns>
        <columns>Type__c</columns>
        <columns>Is_Active__c</columns>
        <columns>Checkbox_Value__c</columns>
        <columns>Multi__c</columns>
        <columns>CIR_Operator__c</columns>
        <columns>CIR_Speed__c</columns>
        <columns>CIR_Value__c</columns>
        <columns>Price_Operator_Values__c</columns>
        <columns>Price_Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ASE TRC - {000000}</displayFormat>
        <label>ASE Technical Review Criteria Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ASE Technical Review Criterias</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>BAN_Validation_for_ASE</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
ISPICKVAL( Field__c , &apos;BAN Check&apos;), 
ISBLANK(TEXT(Checkbox_Value__c)), 
ISBLANK(TEXT(Type__c)) 
)</errorConditionFormula>
        <errorMessage>For BAN Check, fill the values for the fields : Checkbox Value,Type</errorMessage>
    </validationRules>
</CustomObject>